# Indicadores-comg

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  BUGFIX_REPORT_FINAL.md  CHANGELOG.md  CORREÇÕES_LOGGING.py  CORREÇÕES_REALIZADAS.md  Dockerfile  IMMEDIATE_ACTIONS_COMPLETED.md  INCREMENTAL_SYNC_COMPLETE.md  INFRASTRUCTURE_RECOMMENDATIONS.md  Makefile  ORGANIZATION_COMPLETED.md  README.md  REFACTORING_SUMMARY.md  REFATORAÇÃO_ANÁLISE.md  ROADMAP.md  SQLITE_IMPLEMENTATION_COMPLETE.md  STEP8_FINAL_VALIDATION_REPORT.md  analise.ipynb  check_config.py  check_date_fields.py  check_db.py  check_jobs.py  clean_jobs.py  clean_orphaned_jobs.py  debug_config.py  debug_dates.py  debug_recent_records.py  demo_optimization.py  docker-compose.yml  equipments_api_investigation.json  final_demo.py  final_test.py  investigate_sqlite.py  make.bat  make.ps1  pyproject.toml  (+29 more)
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml
.streamlit/: config.toml  secrets.example.toml  secrets.toml  secrets.toml.example
app/: main.py
app/arkmeds_client/: auth.py  client.py  models.py
app/config/: equip_status.py  os_types.py
app/core/: __init__.py  config.py  constants.py  db.py  exceptions.py  logging.py  scheduler.py  startup.py  structlog_system.py
app/data/: __init__.py  validators.py
app/pages/: 10_Configuracoes.py  1_Ordem de serviço.py  1_home.py  2_Equipamentos.py  2_Equipamentos.py.backup  2_Equipamentos_backup.py  2_Equipamentos_simples.py  2_os.py  3_Tecnico.py  3_equip.py  4_tech.py  Configuracoes.py
app/services/: equip_advanced_metrics.py  equip_metrics.py  os_metrics.py  repository.py  repository_new.py  sync_jobs.py  tech_metrics.py
app/ui/: __init__.py  css.py  equip.py  filters.py  home.py  os.py  os_filters.py  tech.py  utils.py
app/utils/: __init__.py  data_processing.py  settings.py  validation.py
application/: metrics.py
assets/: README.md
data/: README.md  app.db  app.db-shm  app.db-wal  ordens_servico.xls
docs/: CORREÇÕES_REALIZADAS.md  MIGRATION_COMPLETED.md  README.md  SQLITE_REFACTOR_COMPLETE.md  api-arkmeds.md  chamados-models.md  refatoracao-limpeza.md  scheduler-system.md
documentation/: AGENTS.md  INFRASTRUCTURE_IMPLEMENTATION_SUMMARY.md  README.md  REFRESH_CONTROLS_COMPLETE.md
domain/: entities.py
infrastructure/: arkmeds_client.py  csv_repository.py  xls_repository.py
pages/: 02_os_metrics.py
presentation/: streamlit_app.py
scripts/: __init__.py  __main__.py  backfill.py  delta.py  lint.py  run.ps1  run.sh  run_tests.py  test_api.py  test_ordem_servico.py
scripts/backfill/: __main__.py
scripts/delta/: __main__.py
src/: arkmeds_api.py
temp_tests/: README.md  investigate_equipments.py  temp_find_users.py  test_equipment_models.py  test_new_equipment_features.py
tests/: README.md  benchmark_performance.py  conftest.py  test_auth.py  test_auth_header.py  test_basic_logging.py  test_client.py  test_company_list.py  test_configuracoes_page.py  test_database.py  test_equip_metrics.py  test_error.txt  test_filters.py  test_metrics.py  test_models.py  test_models_chamado.py  test_os_metrics.py  test_refresh_controls.py  test_routes_exist.py  test_safe_label.py  test_scheduler.py  test_simple_sync.py  test_sqlite_refactor.py  test_startup_sync.py  test_sync_progress.py  test_sync_system.py  test_tech_metrics.py  test_unicode.py  test_utils.py
tests/arkmeds/: __init__.py  test_auth.py  test_client.py  test_models.py  verify_schema_coverage.py
tests/core/: test_structlog_integration.py
tests/e2e/: test_equip_page.py
tests/fixtures/: sample_orders.csv
tests/services/: test_async_metrics.py  test_async_simple.py  test_centralized_exceptions.py  test_os_metrics_repository.py  test_pure_async.py  test_tech_metrics_repository.py
tests/temp/: test_final.py  (+12 more)
ui/: __init__.py
(+23 files in other folders)
