[tool.poetry]
package-mode = true
packages = [{include = "app"}]

[project]
name = "indicadores-comg"
version = "0.1.0"
description = "Aplicativo de geração de indicadores"
authors = [
    {name = "Rafael Ribeiro",email = "rafaelrdlessa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.30,<2.0)",
    "httpx (>=0.27,<0.28)",
    "pydantic (>=2,<3)",
    "pandas (>=2,<3)",
    "plotly (>=5,<6)",
    "cachetools (>=5,<6)",
    "python-dateutil (>=2,<3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

