[tool.poetry]
package-mode = true
packages = [{include = "app"}]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^0.24.0"
respx = "^0.21.0"
ruff = "^0.1.0"
black = "^23.0.0"
structlog = "^23.0.0"

[project]
name = "indicadores-comg"
version = "0.1.0"
description = "Aplicativo de geração de indicadores"
authors = [
    {name = "Rafael Ribeiro",email = "rafaelrdlessa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.30,<2.0)",
    "httpx (>=0.27,<0.28)",
    "pydantic (>=2,<3)",
    "pandas (>=2,<3)",
    "plotly (>=5,<6)",
    "cachetools (>=5,<6)",
    "python-dateutil (>=2,<3)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "streamlit-autorefresh (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

